[package]
name = "vujio_application"
version = "0.1.0"
authors = ["Shawn <shawn@vuj.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/vujio/vujio"
description = "An _experimental_ fast and pertinent web platform for modern devices."

[dependencies]
atty = "0.2.11"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
vujio = { version = "0.1.0", path = "./vujio" }
vujio_client = { version = "0.1.0", path = "vujio_client" }
vujio_server = { version = "0.1.0", path = "vujio_server" }
cargo-watch = "7.5.0"
#cargo-edit = "0.7.0"

[profile.release]
opt-level = 's'
