[package]
name = "vujio"
version = "0.1.0"
authors = ["Shawn <shawn@vuj.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/vujio/vujio"
description = "An _experimental_ fast and pertinent web platform for modern devices."

[dependencies]
atty = "0.2.11"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tungstenite = "0.11.1"
tide-websockets = "0.1.0"
http-types = "2.9.0"
vujio_client = { version = "0.1.0", path = "../vujio_client" }
vujio_server = { version = "0.1.0", path = "../vujio_server" }
syn = "1.0.56"
quote = "1.0.8"
serde_json = "1.0.61"
anyhow = "1.0.36"

[lib]
proc-macro = true
