[package]
name = "vujio_client"
version = "0.1.0"
authors = ["Shawn <shawn@vuj.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/vujio/vujio/vujio_client"
description = "vuj.io client utilities"

[dependencies]
atty = "0.2.11"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tungstenite = "0.11.1"
tide-websockets = "0.1.0"
http-types = "2.9.0"
quote = "1.0.8"
serde_json = "1.0.61"
swc = { version = "0.0.0" }
swc_atoms = { version = "0.2.5" }
swc_bundler = { version = "0.18.2" }
swc_common = { version = "0.10.8" }
swc_ecma_ast = { version = "0.36.2" }
swc_ecma_codegen = { version = "0.42.2" }
swc_ecma_parser = { version = "0.44.1" }
swc_ecma_visit = { version = "0.22.0" }
anyhow = "1.0.36"

