[package]
name = "vujio_server"
version = "0.1.1"
authors = ["Shawn <shawn@vuj.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/vujio/vujio/vujio_server"
description = "vuj.io server utilities"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
http-types = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
tide = "0.15.0"
tide-websockets = "0.1.0"
